[gd_scene load_steps=3 format=3 uid="uid://tesla001"]

[ext_resource type="Script" path="res://scripts/towers/tesla_tower.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/towers/tesla_tower.png" id="2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_range"]
radius = 140.0

[node name="TeslaTower" type="Node2D"]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
scale = Vector2(1, 1)

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_range")

[node name="Barrel" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="ZapTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
[connection signal="timeout" from="ZapTimer" to="." method="_on_zap_timer_timeout"]
